--- a/views/src/app/components/header/header.component.html
+++ b/views/src/app/components/header/header.component.html
@@ -1,1 +1,18 @@
-MENU
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">TrelloClone</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="col-md-5">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="#">Добавить группу</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3"></div>
+  <div class="col-md-3">
+    <button type="button" class="btn btn-outline-success">Войти</button>
+    <button type="button" class="btn btn-outline-warning">Зарегистрироваться</button>
+  </div>
+</nav>
